
- Curl:
  . Fixed bug #69831 (Segmentation fault in curl_getinfo). (im dot denisenko at
    yahoo dot com)

- Opcache:
  . Removed opcache.load_comments configuration directive. Now doc comments
    loading costs nothing and always enabled. (Dmitry)

- PDO_pgsql:
  . Fixed bug #69752 (PDOStatement::execute() leaks memory with DML
    Statements when closeCuror() is u). (Philip Hofstetter)

11 Jun 2015, PHP 7.0.0 Alpha 1

- Core:
  . Fixed bug #69767 (Default parameter value with wrong type segfaults).
    (cmb, Laruence)
  . Fixed bug #69756 (Fatal error: Nesting level too deep - recursive dependency
    ? with ===). (Dmitry, Laruence)
  . Fixed bug #69758 (Item added to array not being removed by array_pop/shift
    ). (Laruence)
  . Fixed bug #68475 (Add support for $callable() sytnax with 'Class::method').
    (Julien, Aaron Piotrowski)
  . Fixed bug #69485 (Double free on zend_list_dtor). (Laruence)
  . Fixed bug #69427 (Segfault on magic method __call of private method in 
    superclass). (Laruence)
  . Improved __call() and __callStatic() magic method handling. Now they are
    called in a stackless way using ZEND_CALL_TRAMPOLINE opcode, without
    additional stack frame. (Laruence, Dmitry)
  . Optimized strings concatenation. (Dmitry, Laruence)
  . Fixed weird operators behavior. Division by zero now emits warning and 
    returns +/-INF, modulo by zero and intdid() throws an exception, shifts
    by negative offset throw exceptions. Compile-time evaluation of division
    by zero is disabled. (Dmitry, Andrea, Nikita)
  . Fixed bug #69371 (Hash table collision leads to inaccessible array keys).
    (Laruence)
  . Fixed bug #68933 (Invalid read of size 8 in zend_std_read_property).
    (Laruence, arjen at react dot com)
  . Fixed bug #68252 (segfault in Zend/zend_hash.c in function
    _zend_hash_del_el). (Laruence)
  . Fixed bug #65598 (Closure executed via static autoload incorrectly marked as
    static). (Nikita)